margin on top of description to avoid overlapping

--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -505,6 +505,7 @@ pre.norender {
 
 .example-content pre {
   margin-top: 0 !important;
+  max-height: 400px; /*In case of larger code Description pre gets overlaps description*/
   width: 30.5em;
 }
 
@@ -566,7 +567,7 @@ pre.norender {
 
 .example_container {
   width: 36em;
-  min-height: 400px;
+  min-height: 500px;
   border-top: 0.09em dashed;
   border-top-color: #333;
   padding-top: 0.5em;
@@ -588,6 +589,10 @@ pre.norender {
 
   .example_container button {
     top: 124px;
+  }
+
+  .description {
+    margin-top: 3rem;
   }
 
   .edit_button {
